--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -56,10 +56,12 @@
             app:popUpTo="@+id/titleFragment"/>
         <argument
             android:name="numQuestions"
-            app:argType="integer" />
+            app:argType="integer"
+            />
         <argument
             android:name="numCorrect"
-            app:argType="integer" />
+            app:argType="integer"
+            />
     </fragment>
     <fragment
         android:id="@+id/gameOverFragment"
